# threadwell

./: .gitignore  NEXT_STEPS.md  README.md
app/react-native/: LICENSE  app.json  copilot-guidelines.md  index.js  jest.config.js  jest.setup.js  package-lock.json  package.json
assets/: .gitkeep
docs/: Project_Scope.md  epic-x-book-reintroduction.md  project-scope.md  storage-api.md  unfinished-ideas.md
docs/architecture/: audio-playback.md  data-model.md
docs/epic-1-finding-our-story/: 01-research-candidate-books.md  02-verify-audiobook-availability.md  03-gather-metadata-and-reviews.md  04-finalize-book-selection.md  05-download-raw-assets.md  epic.md
docs/epic-2-ui-sketch/: epic.md  logo-concept.md
docs/epic-3-basic-react-native-app/: epic.md
docs/epic-4-hard-coded-now-playing-screen/: epic.md
docs/epic-4-simple-audio-playback/: epic.md
docs/epic-6-character-extraction/: epic.md
docs/epic-6-dspy-character-extraction/: epic.md
docs/epic-7-local-charracter-extraction-model/: epic.md
docs/epic-8-scene-detection/: epic.md
docs/epic-9-character-dossier/: epic.md
docs/epic-x-data-modeling-and-json-structuring/: epic.md
docs/epic-x-dspy-scene-detection/: epic.md
docs/epic-x-knowledge-graph/: epic.md
docs/epic-x-text-to-audio-synchronization/: epic.md
models/character-dossier/: characters.json  download_model.py  main.py  pyproject.toml
models/characters-in-scene/: README.md  dspy_llm_extractor.py  fileutils.py  hard-coded-scene.py  main.py  pyproject.toml  spacy_ner_extractor.py
scripts/: download-assets.sh  verify-assets.sh
(+279 files in other folders)
